Credentials Policy 셋업 개선

--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/view.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/view.html
@@ -149,9 +149,16 @@
 				</div>
 			</div>
 			<div class="column column-padding">
-				<div class="ui dividing header small">Check Duration
+				<div class="ui dividing header small">Checking Duration
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.pFailCheckDuration)}" th:text="|${credentialsPolicy.pFailCheckDuration} Sec.|"/>
+					</div>
+				</div>
+			</div>
+			<div class="column column-padding">
+				<div class="ui dividing header small">Freezing Duration
+					<div class="sub header">
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.pFreezingDuration)}" th:text="|${credentialsPolicy.pFreezingDuration} Sec.|"/>
 					</div>
 				</div>
 			</div>
