--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -176,18 +176,24 @@
 			</div>
 		</div>
 		<div class="fields">
-			<div class="eight wide field">
+			<div class="six wide field">
 				<label>Allowable Failure Count</label>
 				<div class="field">
 					<input type="number" name="pAllowableFailCount" th:value="${credentialsPolicy.pAllowableFailCount}" placeholder="Count"/>
 				</div>
 			</div>
-			<div class="eight wide field">
-				<label>Check Duration(sec.)</label>
+			<div class="five wide field">
+				<label>Checking Duration(sec.)</label>
 				<div class="field">
 					<input type="number" name="pFailCheckDuration" th:value="${credentialsPolicy.pFailCheckDuration}" placeholder="Duration(Sec.)"/>
 				</div>
-			</div>			
+			</div>
+			<div class="five wide field">
+				<label>Freezing Duration(sec.)</label>
+				<div class="field">
+					<input type="number" name="pFreezingDuration" th:value="${credentialsPolicy.pFreezingDuration}" placeholder="Duration(Sec.)"/>
+				</div>
+			</div>	
 		</div>
 	</div>
 	<div class="ui divider"></div>
@@ -297,14 +303,17 @@ $(document).ready(function() {
 	$(".ui.checkbox.p-fg-use-pwd-fail-penalty").checkbox({
 		onChecked: function()
 		{
-			$(".BTN_save").trigger("click");
+			$("input[name=pAllowableFailCount], input[name=pFailCheckDuration], input[name=pFreezingDuration]").attr("disabled", false);
 		},
 		onUnchecked: function()
 		{
-			let obj = $("input[name=pAllowableFailCount], input[name=pFailCheckDuration]").closest(".field"); 
+			let obj = $("input[name=pAllowableFailCount], input[name=pFailCheckDuration], input[name=pFreezingDuration]"); 
+			let field = obj.closest(".field")
 			
-			obj.removeClass("error");
-			obj.find(".prompt").remove();
+			field.removeClass("error");
+			field.find(".prompt").remove();
+			
+			obj.attr("disabled", true).val("");
 		}
 	});	
 	
@@ -421,6 +430,15 @@ let formValidCheck = {
 						prompt: "Please input Check Duration(sec.)."
 					}
 				]
+			},
+			pFreezingDuration: {
+				identifier: "pFreezingDuration",
+				rules: [
+					{
+						type: "checkFreezingDuration",
+						prompt: "Please input Freezing Duration(sec.)."
+					}
+				]
 			}
 		},
 		keyboardShortcuts: false
@@ -455,10 +473,13 @@ $.fn.form.settings.rules.checkName = function() {
 	return isValid;	
 };
 
+function isCheckedPwdFailPenalty()
+{
+	return $(".ui.checkbox.p-fg-use-pwd-fail-penalty").checkbox("is checked");
+}
+
 $.fn.form.settings.rules.checkAllowableFailCount = function() {
-	let checked = $(".ui.checkbox.p-fg-use-pwd-fail-penalty").checkbox("is checked");
-	
-	if (checked && JpUtilsString.isEmpty($("input[name=pAllowableFailCount]").val()))
+	if (isCheckedPwdFailPenalty() && JpUtilsString.isEmpty($("input[name=pAllowableFailCount]").val()))
 	{
 		return false;		
 	};
@@ -467,9 +488,16 @@ $.fn.form.settings.rules.checkAllowableFailCount = function() {
 };
 
 $.fn.form.settings.rules.checkFailCheckDuration = function() {
-	let checked = $(".ui.checkbox.p-fg-use-pwd-fail-penalty").checkbox("is checked");
-	
-	if (checked && JpUtilsString.isEmpty($("input[name=pFailCheckDuration]").val()))
+	if (isCheckedPwdFailPenalty() && JpUtilsString.isEmpty($("input[name=pFailCheckDuration]").val()))
+	{
+		return false;		
+	};
+		
+	return true;
+};
+
+$.fn.form.settings.rules.checkFreezingDuration = function() {
+	if (isCheckedPwdFailPenalty() && JpUtilsString.isEmpty($("input[name=pFreezingDuration]").val()))
 	{
 		return false;		
 	};
