opensource license 고시

--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
 			{
 				if (columnIndex == 1)
 				{
-					goView(key);	
+					_showCredentialsPolicy({cpSeq: key});
 				}
 				else if (columnIndex == 5)
 				{
@@ -100,13 +100,6 @@ $(document).ready(function() {
 			doSearch();
 		}
 	});
-
-	function goView(cpSeq)
-	{
-		JpUiPopup.open({
-			url: "/platform/mgmt/user/credentials/policy/view?cpSeq=" + JpUtilsString.trimToEmpty(cpSeq)
-		});			
-	};
 	
 	function goWrite(cpSeq)
 	{
