--- a/src/main/resources/templates/portal/iv/hq/parts/export/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/main.html
@@ -139,7 +139,7 @@
 		</div>
 		<div class="bottom-area">
 			<div class="copy-right">
-				<span th:text="#{PTL_T_COPY_RIGHT}"></span>
+				<a class="link opensource-license" th:text="#{PTL_T_OPENSOURCE_LICENSE}"></a><br/><span th:text="#{PTL_T_COPY_RIGHT}"></span>
 			</div>
 		</div>
 	</div>
@@ -188,6 +188,10 @@ $(function(){
 	$("#BTN_goOrder").on("click", function() {
 		document.location.href = "[[${BASE_PATH}]]/order/create/write";
 	});
+	
+	$(".opensource-license").on("click", function() {
+		document.location.href = "/portal/download/opensource_license.docx";
+	});		
 	
 	//Get last login information
 	JpUtilsAjax.get({
