Ship-to 에 따라 Shipping Condition 조회되지 않는 이슈 조치

--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
@@ -534,7 +534,7 @@ $("#BTN_onetimeAddress").on("click", function() {
 });
 
 $("#BTN_shippingInfo").on("click", function(event) {
-	let param = "orderType=" + orderComponent.getSelectedOrderType() + "&priceGroup=" + orderComponent.getSelectedPriceGroup() + "&customerNo=" + $("#soldToNo").val();
+	let param = "orderType=" + orderComponent.getSelectedOrderType() + "&priceGroup=" + orderComponent.getSelectedPriceGroup() + "&customerNo=" + $("#shipToNo").val();
 
 	Popup.open("[[${BASE_PATH}]]/order/create/popup/shipping_info?" + param, 1000, 500);
 });
