--- a/src/main/resources/templates/platform/mgmt/conn_resource/list.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/list.html
@@ -30,7 +30,7 @@
 <div class="ui one column grid">
 	<div class="column">
 		<div id="BTN_create" class="ui teal button"><i class="plus icon"></i> Create</div>
-		<div id="BTN_copyToCreate" class="ui teal button"><i class="copy outline icon"></i> Copy To Create</div>
+		<!-- div id="BTN_copyToCreate" class="ui teal button"><i class="copy outline icon"></i> Copy To Create</div -->
 		<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
 		<div id="BTN_use" class="ui teal button"><i class="toggle on icon"></i> Use</div>
 		<div id="BTN_disuse" class="ui teal button"><i class="toggle off icon"></i> Disuse</div>
@@ -78,6 +78,7 @@ $(document).ready(function() {
 		});
 	});
 
+	/*
 	$("#BTN_copyToCreate").on("click", function() {
 		let checkedValues = listTable.getCheckedValues();
 		let length = checkedValues.length; 
@@ -98,6 +99,7 @@ $(document).ready(function() {
 			url: "/platform/mgmt/conn_resource/write?scrSeq=" + JpUtilsString.trimToEmpty(checkedValues[0]) + "&mode=copy"
 		});
 	});
+	*/
 	
 	$("#BTN_delete").on("click", function() {
 		
