--- a/src/main/resources/templates/platform/mgmt/conn_resource/view.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/view.html
@@ -9,7 +9,7 @@
 	<div class="column">
 		<div class="ui teal button BTN_copyToCreate"><i class="copy outline icon"></i> Copy To Create</div>
 		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
-		<div class="ui teal button BTN_delete"><i class="minus icon"></i> Delete</div>
+		<div class="ui teal button BTN_delete" th:if="${#lists.isEmpty(sapConnResource.userGroups)}"><i class="minus icon"></i> Delete</div>
 	</div>
 </div>
 <div class="ui divider"></div>
@@ -19,7 +19,7 @@
 	<div class="column">
 		<div class="ui teal button BTN_copyToCreate"><i class="copy outline icon"></i> Copy To Create</div>
 		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
-		<div class="ui teal button BTN_delete"><i class="minus icon"></i> Delete</div>
+		<div class="ui teal button BTN_delete" th:if="${#lists.isEmpty(sapConnResource.userGroups)}"><i class="minus icon"></i> Delete</div>
 	</div>
 </div>
 <form id="FORM_view" class="ui form" autocomplete="off" onsubmit="return false;">
