--- a/src/main/resources/templates/portal/iv/board/view_inc.html
+++ b/src/main/resources/templates/portal/iv/board/view_inc.html
@@ -2,8 +2,8 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-	
-	<script src="/editor_html5/js/xfe_main.js"></script>
+	<script th:src="@{/editor_html5/js/xfe_main.js}"></script>
+	<script th:src="@{/portal/js/portal.utils.xfree.js}"></script>
 	
 	<div class="block-header">
 		<div class="block-title" th:text="${boardName}"></div>
@@ -83,7 +83,7 @@
 $(window).on("load", function() {
 	ProgressBar.hide();
 	
-	initBoardViwer($("#boardViwer"), $("#xfe"));
+	//initBoardViwer($("#boardViwer"), $("#xfe"));
 });
 
 function initBoardViwer($area, $content)
@@ -159,29 +159,13 @@ $("#BTN_back").on("click", function() {
 	$("#FORM_search").submit();
 });
 
-/*
- * 에디터 생성.
- * 
- * basePath : 에디터 모듈이 있는 폴더의 Url 경로를 적어줍니다. (필수)
- * width : 에디터의 너비
- * height : 에디터의 높이
- * onLoad : 에디터 초기 로드 이벤트				 
- */	
-let xfe = new XFE({
-	basePath: "[[@{/editor_html5}]]",
-	width: "100%",
-	viewMode: true,
-    viewModeOptions: {
-    	borderWidth: "0px"
-    },
-	onLoad: function() {
-		xfe.setBodyValue($("#htmlContent").val());
-	}
-});
-	
-xfe.render("xfe");
-
 $("a[downloadKey]").on("click", function() {					
 	PortalFileDownload.download($(this).attr("downloadKey"));
-});	
+});
+
+let xfe = new XfreeViewr({
+	target: "xfe",
+	htmlContent: $("#htmlContent").val()
+});
+xfe.render();
 </script>
