--- a/src/main/resources/templates/portal/iv/hq/parts/promotion/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/promotion/view.html
@@ -5,13 +5,8 @@
 	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
 	
 <th:block layout:fragment="content">
-	<style>
-	body {
-		overflow-y: scroll;
-	}
-	</style>
-	
-	<script src="/editor_html5/js/xfe_main.js"></script>
+	<script th:src="@{/editor_html5/js/xfe_main.js}"></script>
+	<script th:src="@{/portal/js/portal.utils.xfree.js}"></script>
 	
 	<div class="block-header">
 		<div class="block-title" th:text="#{HQP_T_PROMOTION}"></div>
@@ -94,7 +89,6 @@
 					</div>				
 				</td>			
 			</tr>
-			
 		</tbody>
 	</table>
 	</form>
@@ -102,8 +96,6 @@
 	<textarea id="htmlContent" th:text="${promotion.htmlContent}" style="display:none;"></textarea>
 <script>
 $(window).on("load", function() {
-	$("#xfe").height($(".xfeViewFrame ").contents().height());
-
 	ProgressBar.hide();
 });
 
@@ -130,29 +122,14 @@ $("#BTN_back").on("click", function() {
 	$("#FORM_search").submit();
 });
 
-/*
- * 에디터 생성.
- * 
- * basePath : 에디터 모듈이 있는 폴더의 Url 경로를 적어줍니다. (필수)
- * width : 에디터의 너비
- * height : 에디터의 높이
- * onLoad : 에디터 초기 로드 이벤트				 
- */	
-let xfe = new XFE({
-	basePath: "[[@{/editor_html5}]]",
-	viewMode: true,
-    viewModeOptions: {
-    	borderWidth: "0px"
-    },
-	onLoad: function() {
-		xfe.setBodyValue($("#htmlContent").val());
-	}
-});
-	
-xfe.render("xfe");
-
 $("a[downloadKey]").on("click", function() {					
 	PortalFileDownload.download($(this).attr("downloadKey"));
-});	
+});
+
+let xfe = new XfreeViewr({
+	target: "xfe",
+	htmlContent: $("#htmlContent").val()
+});
+xfe.render();	
 </script>
 </th:block>	
