부품기본정보 화면 개선 - 품번 입력 후 엔터 클릭 시 조회되도록 수정

--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/part_info_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/part_info_list.html
@@ -283,8 +283,6 @@ $("#CertifiedProgram").on("click", function(){
 	doSearch(); 
 });
 
-
-
 $("#pPartsNo, #pReqQty").on("keydown", function(event) {	
 	$("#pPartsNo").val($("#pPartsNo").val().toUpperCase());
 	
@@ -293,6 +291,7 @@ $("#pPartsNo, #pReqQty").on("keydown", function(event) {
 		if ($.trim($("#pPartsNo").val()) != "")
 		{
 			doSearch();
+			$("#pPartsNo").autocomplete("close");
 		};
 	};
 });
@@ -319,7 +318,7 @@ $("#pPartsNo").autocomplete({
 						);
 			}
 		});
-	},
+	},	
 	delay: 500,
 	minLength: 4
 });
