--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/sub/part_info_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/sub/part_info_list.html
@@ -245,7 +245,8 @@ $("#pPartsNo, #pReqQty").on("keydown", function(event) {
 	{
 		if ($.trim(this.value) != "")
 		{
-			doSearch();	
+			doSearch();
+			$("#pPartsNo").autocomplete("close");
 		};
 	};
 });
