--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/info/part_info_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/info/part_info_list.html
@@ -263,7 +263,8 @@ $("#pPartsNo, #pReqQty").on("keydown", function(event) {
 	{
 		if ($.trim($("#pPartsNo").val()) != "")
 		{
-			doSearch();	
+			doSearch();
+			$("#pPartsNo").autocomplete("close");
 		};
 	};
 });
