--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
@@ -136,6 +136,11 @@ $(document).ready(function() {
 			doSearch();
 		}
 	});
+	
+	JpUiForm.input.on.enter($("#pPartNo"), function(item) {
+		doSearch();
+		$(item).autocomplete("close");
+	});
 });
 
 function doSearch()
