SAP Connection Resource 수정 후 이전 페이지 이동 오류 수정

--- a/src/main/resources/templates/platform/mgmt/conn_resource/write.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/write.html
@@ -228,7 +228,7 @@ $(document).ready(function() {
 	
 	function goBack()
 	{
-		document.location.href = JpUtilsPath.url("/platform/mgmt/conn_resource/view?scrSeq=${scrSeq}");
+		document.location.href = JpUtilsPath.url("/platform/mgmt/conn_resource/view?scrSeq=[[${scrSeq}]]");
 	};	
 });
 </script>
