계정정책 관리 테스트 수정

--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/view.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/view.html
@@ -39,7 +39,7 @@
 				<div class="ui dividing header small">Length
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMinLength)}" th:text="|Min.${credentialsPolicy.uMinLength}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxLength)}" th:text="|Min.${credentialsPolicy.uMaxLength}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxLength)}" th:text="|Max.${credentialsPolicy.uMaxLength}"/>
 					</div>					
 				</div>
 			</div>
@@ -52,7 +52,7 @@
 				<div class="ui dividing header small">Lowercase
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMinLowercase)}" th:text="|Min.${credentialsPolicy.uMinLowercase}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxLowercase)}" th:text="|Min.${credentialsPolicy.uMaxLowercase}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxLowercase)}" th:text="|Max.${credentialsPolicy.uMaxLowercase}"/>
 					</div>
 				</div>
 			</div>
@@ -65,7 +65,7 @@
 				<div class="ui dividing header small">Uppercase
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMinUppercase)}" th:text="|Min.${credentialsPolicy.uMinUppercase}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxUppercase)}" th:text="|Min.${credentialsPolicy.uMaxUppercase}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxUppercase)}" th:text="|Max.${credentialsPolicy.uMaxUppercase}"/>
 					</div>					
 				</div>
 			</div>
@@ -73,7 +73,7 @@
 				<div class="ui dividing header small">Number
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMinNumber)}" th:text="|Min.${credentialsPolicy.uMinNumber}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxNumber)}" th:text="|Min.${credentialsPolicy.uMaxNumber}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxNumber)}" th:text="|Max.${credentialsPolicy.uMaxNumber}"/>
 					</div>					
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 				<div class="ui dividing header small">Special
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMinSpecial)}" th:text="|Min.${credentialsPolicy.uMinSpecial}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxSpecial)}" th:text="|Min.${credentialsPolicy.uMaxSpecial}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.uMaxSpecial)}" th:text="|Max.${credentialsPolicy.uMaxSpecial}"/>
 					</div>					
 				</div>
 			</div>		
@@ -93,7 +93,7 @@
 				<div class="ui dividing header small">Lowercase
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMinLength)}" th:text="|Min.${credentialsPolicy.pMinLength}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxLength)}" th:text="|Min.${credentialsPolicy.pMaxLength}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxLength)}" th:text="|Max.${credentialsPolicy.pMaxLength}"/>
 					</div>
 				</div>
 			</div>
@@ -101,7 +101,7 @@
 				<div class="ui dividing header small">Lowercase
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMinLowercase)}" th:text="|Min.${credentialsPolicy.pMinLowercase}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxLowercase)}" th:text="|Min.${credentialsPolicy.pMaxLowercase}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxLowercase)}" th:text="|Max.${credentialsPolicy.pMaxLowercase}"/>
 					</div>
 				</div>				
 			</div>
@@ -109,7 +109,7 @@
 				<div class="ui dividing header small">Lowercase
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMinUppercase)}" th:text="|Min.${credentialsPolicy.pMinUppercase}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxUppercase)}" th:text="|Min.${credentialsPolicy.pMaxUppercase}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxUppercase)}" th:text="|Max.${credentialsPolicy.pMaxUppercase}"/>
 					</div>
 				</div>
 			</div>
@@ -117,7 +117,7 @@
 				<div class="ui dividing header small">Lowercase
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMinNumber)}" th:text="|Min.${credentialsPolicy.pMinNumber}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxNumber)}" th:text="|Min.${credentialsPolicy.pMaxNumber}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxNumber)}" th:text="|Max.${credentialsPolicy.pMaxNumber}"/>
 					</div>
 				</div>
 			</div>
@@ -125,7 +125,7 @@
 				<div class="ui dividing header small">Lowercase
 					<div class="sub header">
 						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMinSpecial)}" th:text="|Min.${credentialsPolicy.pMinSpecial}"/>
-						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxSpecial)}" th:text="|Min.${credentialsPolicy.pMaxSpecial}"/>
+						<span th:if="${not #strings.isEmpty(credentialsPolicy.pMaxSpecial)}" th:text="|Max.${credentialsPolicy.pMaxSpecial}"/>
 					</div>
 				</div>
 			</div>
