--- a/src/main/resources/templates/portal/iv/board/view_inc.html
+++ b/src/main/resources/templates/portal/iv/board/view_inc.html
@@ -2,7 +2,7 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-	<script th:src="@{/editor_html5/js/xfe_main.js}"></script>
+	<script src="/editor_html5/js/xfe_main.js"></script>
 	<script th:src="@{/portal/js/portal.utils.xfree.js}"></script>
 	
 	<div class="block-header">
