--- a/src/main/resources/templates/portal/iv/hq/parts/promotion/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/promotion/write.html
@@ -10,7 +10,7 @@ body {
 	overflow-y: scroll;
 }
 </style>
-	<script th:src="@{/editor_html5/js/xfe_main.js}"></script>
+	<script src="/editor_html5/js/xfe_main.js"></script>
 	<script th:src="@{/portal/js/portal.utils.xfree.js}"></script>
 	
 	<!-- Modal for upload simulation -->	
