팝업관리 법인별 분리

--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/main.html
@@ -208,6 +208,7 @@ $(function(){
 	//Popup
 	JpUtilsAjax.get({
 		url: "/portal/iv/board/popup/list/data",
+		data: {bSeq: "1-7d4a2eab-4b06-42a9-b66c-2322da63cad8"},
 		global: false,
 		success: function(data, textStatus, jqXHR)
 		{
