--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -345,6 +345,7 @@ $(function(){
 	//Popup
 	JpUtilsAjax.get({
 		url: "/portal/iv/board/popup/list/data",
+		data: {bSeq: "0-e9267a6b-69ce-445d-a683-42f6cf916787"},
 		global: false,
 		success: function(data, textStatus, jqXHR)
 		{
