--- a/src/main/resources/templates/portal/iv/hq/parts/export/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/main.html
@@ -214,6 +214,7 @@ $(function(){
 	//Popup
 	JpUtilsAjax.get({
 		url: "/portal/iv/board/popup/list/data",
+		data: {bSeq: "1-1f1e20cc-4738-4fbb-93f3-5d7b2b8967eb"},
 		global: false,
 		success: function(data, textStatus, jqXHR)
 		{
