--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/main.html
@@ -207,6 +207,7 @@ $(function(){
 	//Popup
 	JpUtilsAjax.get({
 		url: "/portal/iv/board/popup/list/data",
+		data: {bSeq: "0-d999c226-7a3f-4172-9204-5ec795580621"},
 		global: false,
 		success: function(data, textStatus, jqXHR)
 		{
