--- a/src/main/resources/templates/portal/iv/board/popup/view2.html
+++ b/src/main/resources/templates/portal/iv/board/popup/view2.html
@@ -4,12 +4,35 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-<link rel="stylesheet" type="text/css" th:href="@{/portal/js/semantic/semantic.min.css}" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.css"/>
 <link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/popup/basic.css}" />
-<script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
-<script th:src="@{/portal/js/jquery/jquery.cookie.js}"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fileDownload/1.4.2/jquery.fileDownload.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+<script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
+<script th:src="@{/portal/js/portal.utils.download.js}"></script>
 <script src="/editor_html5/js/xfe_main.js"></script>
 <style>
+.body {
+	overflow: hidden;
+	margin:0;
+	padding:0;
+}
+.attachment {
+	padding: 10px 5px 5px 10px;	
+}
+.pop-top {
+	border-top: 6px solid #003081;
+}
+.pop-title {
+	padding: 10px 5px 5px 20px;
+	font-size: 1.2em;
+}
+.pop-line {
+	margin: 0 20px 0 20px;
+	border-top: 1px solid #cccc;
+}
 .pop-bottom {
 	width:100%;
 	height:45px;
@@ -21,27 +44,28 @@
 .pop-bottom label {
 	color:#fff;
 }
-
 .pop-bottom label.link {color: #fff; cursor: pointer;}
 .pop-bottom label.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
-
-.pop-top {
-	border-top: 6px solid #003081;
-}
-
 </style>
-</head>	
-<body style="overflow: hidden; margin:0; padding:0;">
+</head>
+<body>
 <div class="pop-top"></div>
+<div class="pop-title" th:text="${boardContent.title}"></div>
+<div class="pop-line"></div>
 <div id="xfe"></div>
+<div class="attachment">
+	<div th:each="uploadFileList : ${boardContent.uploadFileLists}">
+		<a class="link downloadKey" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a><div class='split2'></div><span th:text="${uploadFileList.displayFileSize}"></span>
+	</div>
+</div>
 <div id="bottom" class="pop-bottom">	
-	<input type="checkbox" class="custom-ui" checked/> <label th:text="#{HQP_T_NOT_SHOW_POPUP_A_DAY}" class="link"></label>
+	<input type="checkbox" class="custom-ui" checked/> <label th:text="#{HQP_T_NOT_SHOW_POPUP_A_DAY}" class="link not-show-popup"></label>
 	<div style="float: right;"><button id="BTN_close" type="button" th:text="#{HQP_B_CLOSE}"></button></div>	
 </div>
 <textarea id="htmlContent" th:text="${boardContent?.htmlContent}" style="display:none;"></textarea>
 <script>
 $(window).on("load", function() {
-	let height = $(document).outerHeight(true) - $(".pop-top").outerHeight(true) - $("#bottom").outerHeight(true);
+	let height = $(document).outerHeight(true) - $(".pop-top").outerHeight(true) - $(".pop-title").outerHeight(true) - $(".attachment").outerHeight(true) - $("#bottom").outerHeight(true);
 	$("#xfe").height(height);
 });
 
@@ -75,7 +99,11 @@ $("#BTN_close").on("click", function() {
 	window.close();
 });
 
-$(".link").on("click", function() {
+$("a[downloadKey]").on("click", function() {					
+	PortalFileDownload.download($(this).attr("downloadKey"));
+});
+
+$(".not-show-popup").on("click", function() {
 	$("input[type=checkbox]").prop("checked", !$("input[type=checkbox]").is(":checked"));
 });
 
