계정관리 복수 맵핑정보 보유시 오류 발생 이슈 조치

--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
@@ -1000,8 +1000,7 @@ a.gotop {
 }
 .bt-gotop {
 	position: fixed;
-	width: 100%;
-	/*min-width:1300px;*/
+	width: 80px;
 	right: 60px;
 	bottom: 50px;
 	display: none;
