--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
@@ -997,8 +997,7 @@ a.gotop {
 }
 .bt-gotop {
 	position: fixed;
-	width: 100%;
-	min-width:1300px;
+	width: 80px;
 	right: 60px;
 	bottom: 50px;
 	display: none;
