주문 수량 1000 개 이상 입력 시 시뮬레이션 및 주문 생성 안됨 오류 수정

--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -70,7 +70,7 @@
 			</div>
 		</div>
 		<div class="field">
-			<div class="ui checkbox uFgOnlyUppercase">
+			<div class="ui checkbox u-fg-only-uppercase">
 				<input type="checkbox" name="uFgOnlyUppercase" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.uFgOnlyUppercase == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
 				<label>Use Only Upper Case</label>
 			</div>
