--- a/src/main/resources/templates/platform/mgmt/user/list.html
+++ b/src/main/resources/templates/platform/mgmt/user/list.html
@@ -103,7 +103,7 @@
 <div id="MDL_coptyToCreate" class="ui tiny modal">
     <h3 class="ui header">Create User</h3>
     <div class="content">
-    	<form id="FORM_copyToCreate" method="POST" class="ui form" autocomplete="off">
+    	<form id="FORM_copyToCreate" method="POST" class="ui form" autocomplete="off" onsubmit="return false;">
     	<input type="hidden" name="uSeq"/>
     	<div class="ui one column grid">
     		<div class="column">
